modificadas umas coisas

--- a/k8s-delete-pods-failed/values.yaml
+++ b/k8s-delete-pods-failed/values.yaml
@@ -6,3 +6,4 @@ cronjobs:
   - name: 'del-failed-pods'
     cron: "0 * * * *"
     command: ["kubectl  delete pods --all-namespaces --field-selector status.phase=Failed -A --ignore-not-found=true"]
+    restartPolicy: Never
